# ComputerNetwork

./: CMakeLists.txt
doc/: dnsrelay.txt
lib/: MyFunction.h  MySocket.h  datastructure.h
src/: MyFunction.c  MySocket.c  MySocket.h  main.c  test.c
